--- a/10 Docker Volume/4.md
+++ b/10 Docker Volume/4.md
@@ -112,8 +112,63 @@ Error response from daemon: Mount denied: The source path <path> is not shared f
 
 ## 5.2 Permissões de Arquivo
 - O Windows pode aplicar permissões inadequadas ao contêiner, causando erros de leitura/escrita.
-Solução:
-Ajuste as permissões do diretório no Windows:
-powershell
-Copiar código
-icacls C:\caminho /grant Everyone:F
+- ### Solução:
+   - Ajuste as permissões do diretório no Windows:
+    powershell
+    ```
+    icacls C:\caminho /grant Everyone:F
+    ```
+## 5.3 Performance Lenta
+- Em alguns casos, o desempenho do bind mount no Windows (especialmente com WSL2) pode ser inferior ao Linux.
+- ### Solução:
+   - Use volumes gerenciados pelo Docker para produção.
+   - Para WSL2, tente armazenar os arquivos dentro do subsistema Linux.
+
+## 5.4 Caminhos Inválidos
+- No Windows, o Docker converte caminhos automaticamente, mas pode haver problemas com formatos incorretos.
+- ###Solução:
+   - Use caminhos absolutos no formato do Windows:
+    bash
+    ```
+    C:\caminho\do\host
+    ```
+
+# 6. Boas Práticas com Bind Mount no Windows
+1. **Prefira Caminhos Absolutos**:
+- Sempre use caminhos completos ao montar diretórios.
+
+bash
+```
+docker run -v C:\projeto:/app ubuntu
+```
+2. **Evite Montar Diretórios Sensíveis**:
+- Não monte diretórios como `C:\Windows ou C:\Users`.
+
+3. **Use Bind Mounts para Desenvolvimento**:
+- Para produção, prefira volumes gerenciados pelo Docker.
+
+4. **Teste em Diferentes Plataformas**:
+- Verifique a compatibilidade do bind mount se o projeto for usado em múltiplos sistemas operacionais.
+
+5. **Atenção ao Desempenho**:
+- Use volumes ou otimize as operações em casos de lentidão.
+
+# 7. Comparação com WSL2
+No **WSL2** (Windows Subsystem for Linux), os bind mounts podem ser configurados para usar diretórios dentro do subsistema Linux, o que melhora o desempenho:
+
+## Bind Mount no WSL2
+bash
+```
+docker run -v /mnt/c/meu-projeto:/app ubuntu
+```
+# 8. Conclusão
+O **Bind Mount** no Windows é uma funcionalidade essencial para desenvolvimento e sincronização de dados entre o host e contêineres. No entanto, requer atenção a configurações específicas, como compartilhamento de drives, permissões e desempenho.
+
+## Resumo de Boas Práticas:
+1. Configure o compartilhamento de drives no Docker Desktop.
+2. Use bind mounts para desenvolvimento e logs.
+3. Prefira volumes gerenciados para produção.
+4. Verifique as permissões de diretórios no host.
+5. Teste e ajuste o desempenho em ambientes WSL2.
+
+Se precisar de ajuda para configurar ou solucionar problemas no Bind Mount no Windows, é só chamar! 🚀😊
